--- a/ansible/install_applications/roles/tool_homepage_deploy/app/config/settings.yaml.j2
+++ b/ansible/install_applications/roles/tool_homepage_deploy/app/config/settings.yaml.j2
@@ -10,7 +10,7 @@ layout:
 #    icon: home-assistant.png
 #    style: row
 #    columns: 4
-  Infrastructure:
+  Cluster Management:
     icon: mdi-server
   Monitoring:
     icon: mdi-heartbeat
