--- a/ansible/install_applications/roles/dev_gitea_deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/dev_gitea_deploy/app/deploy/ingress.yaml.j2
@@ -6,6 +6,13 @@ metadata:
   labels:
     {{ gitea.labels_def | to_nice_yaml() | indent(4) }}
     {{ gitea.labels_desc | to_nice_yaml() | indent(4) }}
+  annotations:
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/group: Dev
+    gethomepage.dev/name: Gitea
+    gethomepage.dev/description: Lightweight code hosting solution
+    gethomepage.dev/icon: gitea
+    gethomepage.dev/pod-selector: "app.kubernetes.io/name=gitea"
 spec:
   ingressClassName: nginx
   tls:
