--- a/ansible/install_applications/roles/download_deluge_deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download_deluge_deploy/app/deploy/ingress.yaml.j2
@@ -6,6 +6,13 @@ metadata:
   labels:
     {{ deluge.labels_def | to_nice_yaml() | indent(4) }}
     {{ deluge.labels_desc | to_nice_yaml() | indent(4) }}
+  annotations:
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/group: Download
+    gethomepage.dev/name: Deluge
+    gethomepage.dev/description: Torrent client
+    gethomepage.dev/icon: deluge
+    gethomepage.dev/pod-selector: "app.kubernetes.io/name=deluge"
 spec:
   ingressClassName: nginx
   tls:
