--- a/ansible/install_applications/roles/download_sabnzbd_deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download_sabnzbd_deploy/app/deploy/ingress.yaml.j2
@@ -6,6 +6,13 @@ metadata:
   labels:
     {{ sabnzbd.labels_def | to_nice_yaml() | indent(4) }}
     {{ sabnzbd.labels_desc | to_nice_yaml() | indent(4) }}
+  annotations:
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/group: Download
+    gethomepage.dev/name: SABnzbd
+    gethomepage.dev/description: Binary newsreader
+    gethomepage.dev/icon: sabnzbd
+    gethomepage.dev/pod-selector: "app.kubernetes.io/name=sabnzbd"
 spec:
   ingressClassName: nginx
   tls:
