--- a/ansible/install_applications/roles/logging_kibana_deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/logging_kibana_deploy/app/deploy/ingress.yaml.j2
@@ -6,6 +6,13 @@ metadata:
   labels:
     {{ kibana.labels_def | to_nice_yaml() | indent(4) }}
     {{ kibana.labels_desc | to_nice_yaml() | indent(4) }}
+  annotations:
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/group: Monitoring
+    gethomepage.dev/name: OpenSearch Dashboards
+    gethomepage.dev/description: Visualize your Elasticsearch data
+    gethomepage.dev/icon: opensearch
+    gethomepage.dev/pod-selector: "app.kubernetes.io/name=kibana"
 spec:
   ingressClassName: nginx
   tls:
