--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/ingress-alertmanager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/ingress-alertmanager.yaml.j2
@@ -10,6 +10,12 @@ metadata:
 {% if alertmanager.context_root != "" %}
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
 {% endif %}
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/group: Monitoring
+    gethomepage.dev/name: AlertManager
+    gethomepage.dev/description: Alert manager for Prometheus
+    gethomepage.dev/icon: prometheus
+    gethomepage.dev/pod-selector: "app.kubernetes.io/name=alertmanager"
 spec:
   ingressClassName: nginx
   rules:
