--- a/ansible/install_applications/roles/tool_miniflux_deploy/app/deploy/miniflux-ingress.yaml.j2
+++ b/ansible/install_applications/roles/tool_miniflux_deploy/app/deploy/miniflux-ingress.yaml.j2
@@ -6,6 +6,13 @@ metadata:
   labels:
     {{ miniflux.labels_def | to_nice_yaml() | indent(4) }}
     {{ miniflux.labels_desc | to_nice_yaml() | indent(4) }}
+  annotations:
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/group: Tools
+    gethomepage.dev/name: Miniflux
+    gethomepage.dev/description: Miniflux is a minimalist and opinionated feed reader
+    gethomepage.dev/icon: miniflux
+    gethomepage.dev/pod-selector: "app.kubernetes.io/name=miniflux,app.kubernetes.io/component!=reminiflux"
 spec:
   ingressClassName: nginx
   tls:
@@ -16,13 +23,6 @@ spec:
   - host: miniflux.tool.{{ web_base_domain }}
     http:
       paths:
-      - path: /reminiflux
-        pathType: Prefix
-        backend:
-          service:
-            name: reminiflux
-            port:
-              name: http
       - path: /
         pathType: Prefix
         backend:
