--- a/ansible/install_applications/roles/tool_homepage_deploy/app/config/services.yaml.j2
+++ b/ansible/install_applications/roles/tool_homepage_deploy/app/config/services.yaml.j2
@@ -2,3 +2,6 @@
 # For configuration options and examples, please see:
 # https://gethomepage.dev/en/configs/services
 
+{% if homepage.config.external_services | length > 0 %}
+{{ homepage.config.external_services | to_nice_yaml() }}
+{% endif %}
