--- a/ansible/install_applications/roles/tool_homepage_deploy/app/config/settings.yaml.j2
+++ b/ansible/install_applications/roles/tool_homepage_deploy/app/config/settings.yaml.j2
@@ -6,10 +6,6 @@ base: https://homepage.tool.{{ web_base_domain }}
 target: _blank
 
 layout:
-#  Media:
-#    icon: home-assistant.png
-#    style: row
-#    columns: 4
   Cluster Management:
     icon: mdi-server
   Monitoring:
@@ -26,6 +22,9 @@ layout:
     icon: mdi-download
   Stream:
     icon: mdi-stream
+{% if homepage.config.external_categories.keys() | length > 0 %}
+  {{ homepage.config.external_categories | to_nice_yaml() | indent(2) }}
+{% endif %}
 
 providers:
   longhorn:
