--- a/ansible/install_applications/roles/download_pyload_deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download_pyload_deploy/app/deploy/ingress.yaml.j2
@@ -13,6 +13,14 @@ metadata:
     gethomepage.dev/description: HTTP download manager
     gethomepage.dev/icon: pyload
     gethomepage.dev/pod-selector: "app.kubernetes.io/name=pyload"
+{% if homepage.config.pyload.enabled %}
+    # https://gethomepage.dev/en/services/pyload/
+    gethomepage.dev/widget.type: "pyload"
+    gethomepage.dev/widget.url: "http://pyload.download-pyload.svc.cluster.local:80"
+    gethomepage.dev/widget.fields: '["speed", "active", "queue", "total"]'
+    gethomepage.dev/widget.username: "{{ homepage.config.pyload.username }}"
+    gethomepage.dev/widget.password: "{{ homepage.config.pyload.password }}"
+{% endif %}
 spec:
   ingressClassName: nginx
   tls:
