--- a/ansible/install_applications/roles/download_pyload_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/download_pyload_deploy/app/deploy/networkPolicies.yaml.j2
@@ -14,7 +14,7 @@ spec:
       {{ pyload.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
-    # Allow from the ingress controller
+    # Allow http from the ingress controller
     - ports:
         - port: webui
       from:
@@ -24,3 +24,16 @@ spec:
           podSelector:
             matchLabels:
               {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+
+{% if homepage.config.pyload.enabled %}
+    # Allow http from the homepage (to enable the widget)
+    - ports:
+        - port: webui
+      from:
+        - namespaceSelector:
+            matchLabels:
+              name: {{ homepage.namespace }}
+          podSelector:
+            matchLabels:
+              {{ homepage.labels_def | to_nice_yaml() | indent(14) }}
+{% endif %}
