--- a/ansible/install_applications/roles/download_sabnzbd_deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download_sabnzbd_deploy/app/deploy/ingress.yaml.j2
@@ -13,6 +13,13 @@ metadata:
     gethomepage.dev/description: Binary newsreader
     gethomepage.dev/icon: sabnzbd
     gethomepage.dev/pod-selector: "app.kubernetes.io/name=sabnzbd"
+{% if homepage.config.sabnzbd.enabled %}
+    # https://gethomepage.dev/en/services/sabnzbd/
+    gethomepage.dev/widget.type: "sabnzbd"
+    gethomepage.dev/widget.url: "http://sabnzbd.download-sabnzbd.svc.cluster.local:80"
+    gethomepage.dev/widget.fields: '["rate", "queue", "timeleft"]'
+    gethomepage.dev/widget.key: "{{ homepage.config.sabnzbd.apikey }}"
+{% endif %}
 spec:
   ingressClassName: nginx
   tls:
