--- a/ansible/install_applications/roles/download_sabnzbd_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/download_sabnzbd_deploy/app/deploy/networkPolicies.yaml.j2
@@ -14,10 +14,10 @@ spec:
       {{ sabnzbd.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
+    # Allow http from the ingress controller
     - ports:
         - port: http
       from:
-        # Allow from the ingress controller
         - namespaceSelector:
             matchLabels:
               {{ ingress_nginx.namespace_labels_def | to_nice_yaml() | indent(14) }}
@@ -25,7 +25,23 @@ spec:
             matchLabels:
               {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
 
-        # Allow from sickchill
+{% if homepage.config.sabnzbd.enabled %}
+    # Allow http from the homepage (to enable the widget)
+    - ports:
+        - port: http
+      from:
+        - namespaceSelector:
+            matchLabels:
+              name: {{ homepage.namespace }}
+          podSelector:
+            matchLabels:
+              {{ homepage.labels_def | to_nice_yaml() | indent(14) }}
+{% endif %}
+
+    # Allow from sickchill
+    - ports:
+        - port: http
+      from:
         - namespaceSelector:
             matchLabels:
               name: {{ sickchill.namespace }}
