--- a/ansible/install_applications/roles/infra_unifi_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra_unifi_deploy/app/deploy/networkPolicies.yaml.j2
@@ -14,7 +14,7 @@ spec:
       {{ unifi.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
-    # Allow from the ingress controller
+    # Allow http from the ingress controller
     - ports:
         - port: https
       from:
@@ -24,6 +24,19 @@ spec:
           podSelector:
             matchLabels:
               {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+
+{% if homepage.config.unifi.enabled %}
+    # Allow http from the homepage (to enable the widget)
+    - ports:
+        - port: https
+      from:
+        - namespaceSelector:
+            matchLabels:
+              name: {{ homepage.namespace }}
+          podSelector:
+            matchLabels:
+              {{ homepage.labels_def | to_nice_yaml() | indent(14) }}
+{% endif %}
 
     # Allow private ports from everywhere
     - ports:
