--- a/ansible/install_applications/roles/tool_homepage_deploy/app/config/widgets.yaml.j2
+++ b/ansible/install_applications/roles/tool_homepage_deploy/app/config/widgets.yaml.j2
@@ -5,6 +5,12 @@
 - greeting:
     text_size: sm
     text: "{{ homepage.config.greeting }}"
+{% if homepage.config.unifi.enabled %}
+- unifi_console:
+    url: https://unifi-frontend.infra-unifi.svc.cluster.local:443
+    username: {{ homepage.config.unifi.username }}
+    password: {{ homepage.config.unifi.password }}
+{% endif %}
 - kubernetes:
     cluster:
       # Shows the cluster node
