--- a/ansible/install_applications/roles/tool_miniflux_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/tool_miniflux_deploy/app/deploy/networkPolicies.yaml.j2
@@ -51,6 +51,19 @@ spec:
             matchLabels:
               {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
 
+{% if homepage.config.miniflux.enabled %}
+    # Allow http from the homepage (to enable the widget)
+    - ports:
+        - port: http
+      from:
+        - namespaceSelector:
+            matchLabels:
+              name: {{ homepage.namespace }}
+          podSelector:
+            matchLabels:
+              {{ homepage.labels_def | to_nice_yaml() | indent(14) }}
+{% endif %}
+
 ---
 
 kind: NetworkPolicy
