--- a/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/ingress.yaml.j2
@@ -13,6 +13,14 @@ metadata:
     gethomepage.dev/description: Scan & OCR documents
     gethomepage.dev/icon: paperless
     gethomepage.dev/pod-selector: "app.kubernetes.io/name=paperless"
+{% if homepage.config.paperless.enabled %}
+    # https://gethomepage.dev/en/services/paperlessngx/
+    gethomepage.dev/widget.type: "paperlessngx"
+    gethomepage.dev/widget.url: "http://paperless.tool-paperless.svc.cluster.local:8000"
+    gethomepage.dev/widget.fields: '["total", "inbox"]'
+    gethomepage.dev/widget.username: "{{ homepage.config.paperless.username }}"
+    gethomepage.dev/widget.password: "{{ homepage.config.paperless.password }}"
+{% endif %}
 spec:
   ingressClassName: nginx
   tls:
