--- a/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/networkPolicies.yaml.j2
@@ -76,3 +76,16 @@ spec:
           podSelector:
             matchLabels:
               {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+
+{% if homepage.config.paperless.enabled %}
+    # Allow http from the homepage (to enable the widget)
+    - ports:
+        - port: web
+      from:
+        - namespaceSelector:
+            matchLabels:
+              name: {{ homepage.namespace }}
+          podSelector:
+            matchLabels:
+              {{ homepage.labels_def | to_nice_yaml() | indent(14) }}
+{% endif %}
