Add new Files category

--- a/ansible/install_applications/roles/tool_nextcloud_deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/tool_nextcloud_deploy/app/deploy/ingress.yaml.j2
@@ -8,7 +8,7 @@ metadata:
     {{ nextcloud.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     gethomepage.dev/enabled: "true"
-    gethomepage.dev/group: Tools
+    gethomepage.dev/group: Files
     gethomepage.dev/name: Nextcloud
     gethomepage.dev/description: The self-hosted productivity platform that keeps you in control
     gethomepage.dev/icon: nextcloud
