--- a/ansible/install_applications/roles/tool_syncthing_deploy/app/deploy/syncthing-ingress.yaml.j2
+++ b/ansible/install_applications/roles/tool_syncthing_deploy/app/deploy/syncthing-ingress.yaml.j2
@@ -11,7 +11,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
 {% endif %}
     gethomepage.dev/enabled: "true"
-    gethomepage.dev/group: Tools
+    gethomepage.dev/group: Files
     gethomepage.dev/name: Syncthing
     gethomepage.dev/description: Syncthing is a continuous file synchronization program
     gethomepage.dev/icon: syncthing
