--- a/ansible/install_applications/roles/tool_homepage_deploy/app/config/settings.yaml.j2
+++ b/ansible/install_applications/roles/tool_homepage_deploy/app/config/settings.yaml.j2
@@ -14,6 +14,8 @@ layout:
     icon: mdi-at
   Tools:
     icon: mdi-toolbox
+  Files:
+    icon: mdi-file-cabinet
   Home:
     icon: mdi-home
   Dev:
