--- a/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/tool_paperless_deploy/app/deploy/ingress.yaml.j2
@@ -8,7 +8,7 @@ metadata:
     {{ paperless.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     gethomepage.dev/enabled: "true"
-    gethomepage.dev/group: Tools
+    gethomepage.dev/group: Files
     gethomepage.dev/name: Paperless
     gethomepage.dev/description: Scan & OCR documents
     gethomepage.dev/icon: paperless
