Hide nodes for the kubernetes and longhorn widgets

--- a/ansible/install_applications/roles/tool_homepage_deploy/app/config/widgets.yaml.j2
+++ b/ansible/install_applications/roles/tool_homepage_deploy/app/config/widgets.yaml.j2
@@ -26,7 +26,7 @@
       label: "cluster"
     nodes:
       # Shows the clusters
-      show: true
+      show: false
       # Shows the CPU for each node
       cpu: true
       # Shows the memory for each node
@@ -41,7 +41,7 @@
     # Shows the node names as labels
     labels: true
     # Show the nodes
-    nodes: true
+    nodes: false
 - datetime:
     format:
       timeStyle: short
