--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -706,6 +706,16 @@ watchers:
   ################
   # Apps : Tools #
   ################
+  - name: Homepage
+    type: docker_registry
+    repo: {{ homepage.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ homepage.base_image.name }}
+    tag: {{ homepage.base_image.tag }}
+    includes:
+      - ^v[0-9]+\.[0-9]+\.[0-9]+
+    excludes:
+      - ^v0\.[0-5]\.
+      - ^v0\.6\.[0-6]
   - name: Miniflux
     type: docker_registry
     repo: {{ miniflux.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
