Fix homeassistant bootstrap

--- a/ansible/install_applications/roles/home_homeassistant_deploy/app/config/bootstrap/automations.yaml.j2
+++ b/ansible/install_applications/roles/home_homeassistant_deploy/app/config/bootstrap/automations.yaml.j2
@@ -44,7 +44,7 @@
         Please edit `automations.yaml` to permanently remove it.
 
 {% if homeassistant.gotify.enabled %}
-- alias: welcome_email_gotify
+- alias: welcome_gotify
   trigger:
     platform: homeassistant
     event: start
