--- a/ansible/install_applications/roles/home_homeassistant_deploy/app/config/bootstrap/secrets.yaml.j2
+++ b/ansible/install_applications/roles/home_homeassistant_deploy/app/config/bootstrap/secrets.yaml.j2
@@ -18,3 +18,9 @@ smtp_recipient_user: user@mail.net
 # Gotify
 gotify_application_token: {{ homeassistant_gotify_application_token }}
 {% endif %}
+
+{% if homeassistant.ntfy.enabled %}
+# Ntfy
+ntfy_username: {{ homeassistant.ntfy.username }}
+ntfy_password: {{ homeassistant.ntfy.password }}
+{% endif %}
