Fix prometheus and alertmanager URLs on homepage

--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/ingress-alertmanager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/ingress-alertmanager.yaml.j2
@@ -18,6 +18,10 @@ metadata:
     gethomepage.dev/pod-selector: "app.kubernetes.io/name=alertmanager"
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+      - ntfy.infra.{{ web_base_domain }}
+      secretName: ingress-tls
   rules:
   - host: alertmanager.monitoring.intra.{{ web_base_domain }}
     http:
