--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/alertmanager/alertmanager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/alertmanager/alertmanager.yaml.j2
@@ -38,14 +38,12 @@ inhibit_rules:
 receivers:
 - name: "null"
 - name: Watchdog
-{% for receiver in alertmanager.receivers | default([]) %}
-- name: '{{ receiver.name }}'
+- name: '{{ alertmanager.default_receiver.name }}'
   email_configs:
-{% for email_to in receiver.emails_to %}
+{% for email_to in alertmanager.default_receiver.emails_to %}
   - to: '{{ email_to }}'
     tls_config:
       ca_file: /etc/alertmanager/secrets/cluster-ca/ca.crt
-{% endfor %}
 {% endfor %}
 
 route:
@@ -53,7 +51,7 @@ route:
     - namespace
   group_interval: 5m
   group_wait: 30s
-  receiver: "{{ alertmanager.default_receiver | default("null") }}"
+  receiver: "{{ alertmanager.default_receiver.name }}"
   repeat_interval: 12h
   routes:
   - matchers:
