--- a/ansible/install_applications/roles/infra_ntfy_deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra_ntfy_deploy/app/deploy/networkPolicies.yaml.j2
@@ -37,3 +37,32 @@ spec:
           podSelector:
             matchLabels:
               {{ homeassistant.labels_def | to_nice_yaml() | indent(14) }}
+
+---
+
+kind: NetworkPolicy
+apiVersion: networking.k8s.io/v1
+metadata:
+  name: allow-to-ntfy-alertmanager
+  namespace: {{ ntfy.namespace }}
+  labels:
+    {{ ntfy_alertmanager.labels_def | to_nice_yaml() | indent(4) }}
+    {{ ntfy_alertmanager.labels_desc | to_nice_yaml() | indent(4) }}
+spec:
+  types: [Ingress]
+
+  podSelector:
+    matchLabels:
+      {{ ntfy_alertmanager.labels_def | to_nice_yaml() | indent(6) }}
+
+  ingress:
+    - ports:
+        - port: http
+      from:
+        # Allow from alertmanager
+        - namespaceSelector:
+            matchLabels:
+              name: {{ prometheus.namespace }}
+          podSelector:
+            matchLabels:
+              {{ alertmanager.labels_def | to_nice_yaml() | indent(14) }}
