--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -380,6 +380,22 @@ watchers:
       - ^2\.[0-1]\.
       - ^2\.2\.[0-3]$
   - type: docker_registry
+    repo: {{ ntfy.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ ntfy.base_image.name }}
+    tag: {{ ntfy.base_image.tag }}
+    includes:
+      - v[0-9]+\.[0-9]+\.[0-9]+-amd64
+    excludes:
+      - ^v[0-1]\..*
+  - type: docker_registry
+    repo: {{ ntfy_alertmanager.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
+    image: {{ ntfy_alertmanager.base_image.name }}
+    tag: {{ ntfy_alertmanager.base_image.tag }}
+    includes:
+      - ^[0-9]+\.[0-9]+\.[0-9]+
+    excludes:
+      - ^0\.[0-1]\..*
+  - type: docker_registry
     name: Gandi LiveDNS Base image
     repo: {{ _gandi_livedns_var_loader.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
     image: {{ _gandi_livedns_var_loader.base_image.name }}
